--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
     </header>
     <main>
       <div class="question"></div>
-      <div class="answer"></div>
+      <div class="answer">
+        <div>
+          <h2 class="answerText"></h2>
+          <input type="number" class="inputNum" />
+        </div>
+        <div>
+          <h2 class="answerText"></h2>
+          <input type="number" class="inputNum" />
+        </div>
+        <div>
+          <h2 class="answerText"></h2>
+          <input type="number" class="inputNum" />
+        </div>
+      </div>
       <div class="btns">
         <button class="submit">Submit</button>
       </div>
