update ui; penambahan fitur reload dan visible text; debugging

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </head>
   <body>
     <header>
-      <h1>CRYPTARITHM</h1>
+      <h1>CRYPTARITHM ONLINE</h1>
       <h3>
-        Tantang Dirimu dengan Bermain Salah Satu Game di CoC Secara Gratis
+        Asah Kemampuan Numerikmu dengan Memecahkan Teka-teki Cryptarithm Ini!
       </h3>
     </header>
-    <main>
+    <main class="not-start-yet">
       <div class="question"></div>
       <div class="answer">
         <div>
@@ -38,8 +38,15 @@
       </div>
       <div class="btns">
         <button class="submit">Submit</button>
+        <button class="reload icon">
+          <i class="fa-solid fa-rotate-left"></i>
+        </button>
+        <button class="visible-feature icon">
+          <i class="fa-solid fa-eye-slash char"></i>
+        </button>
       </div>
     </main>
+    <button class="starto-btn">Starto</button>
     <footer>
       <div class="footer-icons">
         <a href="https://instagram.com/hhibrizii" id="ig" target="_blank"
