--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
         </div>
       </div>
       <div class="btns">
-        <button class="submit">Submit</button>
+        <button class="submit">SUBMIT</button>
+        <button class="option icon">
+          <i class="fa-solid fa-plus-minus"></i>
+        </button>
         <button class="reload icon">
           <i class="fa-solid fa-rotate-left"></i>
         </button>
         <button class="visible-feature icon">
           <i class="fa-solid fa-eye-slash char"></i>
+        </button>
+        <button class="explaining icon">
+          <i class="fa-regular fa-circle-question"></i>
         </button>
       </div>
     </main>
