fitur ver option btn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Asah Kemampuan Numerikmu dengan Memecahkan Teka-teki Cryptarithm Ini!
       </h3>
     </header>
-    <main class="not-start-yet">
+    <main>
       <div class="question"></div>
       <div class="answer">
         <div>
@@ -52,7 +52,11 @@
         </button>
       </div>
     </main>
-    <button class="starto-btn">Starto</button>
+    <dialog class="dialog-option">
+      <h2>Operasi apa nih yg ingin Kamu kerjain?</h2>
+      <button class="option-btn">Penjumlahan</button>
+      <button class="option-btn">Pengurangan</button>
+    </dialog>
     <footer>
       <div class="footer-icons">
         <a href="https://instagram.com/hhibrizii" id="ig" target="_blank"
