pembaruan flow, debugging, pemberian tooltip info for new user

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Main cryptarithm Clash of Champions CoC online gratis" />
+      content="Website Main cryptarithm Clash of Champions CoC online gratis" />
     <title>CRYPTARITHM</title>
     <script
       src="https://kit.fontawesome.com/cedd60cf88.js"
@@ -17,10 +17,10 @@
     <header>
       <h1>CRYPTARITHM ONLINE</h1>
       <h3>
-        Asah Kemampuan Numerikmu dengan Memecahkan Teka-teki Cryptarithm Ini!
+        Latih Kemampuan Numerikmu dengan Memecahkan Teka-teki Cryptarithm!
       </h3>
     </header>
-    <main>
+    <main class="not-started">
       <div class="question"></div>
       <div class="answer">
         <div>
@@ -39,7 +39,7 @@
       <div class="btns">
         <button class="submit">SUBMIT</button>
         <button class="option icon">
-          <i class="fa-solid fa-plus-minus"></i>
+          <i class="fa-solid fa-calculator"></i>
         </button>
         <button class="reload icon">
           <i class="fa-solid fa-rotate-left"></i>
@@ -47,15 +47,58 @@
         <button class="visible-feature icon">
           <i class="fa-solid fa-eye-slash char"></i>
         </button>
-        <button class="explaining icon">
-          <i class="fa-regular fa-circle-question"></i>
+        <button class="explaining icon tooltip">
+          <i class="fa-solid fa-circle-info"></i>
         </button>
       </div>
     </main>
     <dialog class="dialog-option">
-      <h2>Operasi apa nih yg ingin Kamu kerjain?</h2>
-      <button class="option-btn">Penjumlahan</button>
-      <button class="option-btn">Pengurangan</button>
+      <h2>Pilih jenis operasi cryptarithm yang mau kamu pecahkan</h2>
+      <button class="option-btn">Penjumlahan (+)</button>
+      <button class="option-btn">Pengurangan (-)</button>
+    </dialog>
+    <dialog class="dialog-info">
+      <i class="fa-solid fa-circle-xmark"></i>
+      <div class="content-info">
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, vero.
+          Quidem libero, porro harum praesentium, maiores reprehenderit cum
+          aspernatur nisi saepe nihil dicta. Similique eveniet dolorem inventore
+          porro excepturi reprehenderit.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, vero.
+          Quidem libero, porro harum praesentium, maiores reprehenderit cum
+          aspernatur nisi saepe nihil dicta. Similique eveniet dolorem inventore
+          porro excepturi reprehenderit.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis,
+          ratione. Tempora reprehenderit ab ex accusantium temporibus quidem
+          consequuntur. Nemo omnis quam perferendis perspiciatis praesentium
+          repudiandae eaque architecto laboriosam, dignissimos est, obcaecati
+          accusantium. Alias doloremque, voluptate sunt temporibus praesentium
+          veritatis facere sequi, quae, natus saepe aut excepturi aliquam
+          pariatur quo rem quibusdam vero repellat deserunt vel dignissimos
+          quia! Maxime consequuntur quisquam adipisci exercitationem omnis
+          repellat quos ipsum velit. Dolore voluptatem dignissimos earum alias
+          similique, voluptate et officiis doloribus atque libero perspiciatis
+          cum aliquam eligendi facilis. Dolorum nostrum corrupti fuga dolores
+          laborum enim exercitationem reiciendis ipsa veritatis reprehenderit
+          quos eum delectus illo harum, odit accusamus culpa perferendis ratione
+          inventore iure voluptatibus atque earum? Distinctio excepturi aliquam
+          consectetur molestias voluptatum fugit assumenda blanditiis, quia
+          fugiat ad quae dolorum repellat cumque pariatur quas cupiditate vitae
+          ipsam illum fuga amet nobis. Quae fuga cupiditate nemo deserunt nihil
+          dolore eveniet nam nisi voluptate ex, est neque? Voluptates id esse
+          nemo ad ipsam sunt dolores doloribus ex debitis quo, unde deserunt
+          modi, possimus nesciunt provident laudantium, repudiandae eius vero
+          amet neque. Debitis ut ullam vitae. Tempore doloribus minima sed quas
+          amet minus tempora laudantium ut. Dolorem officia adipisci dolor nam
+          praesentium nulla veniam exercitationem in eligendi. Vel!
+        </p>
+      </div>
     </dialog>
     <footer>
       <div class="footer-icons">
