--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button class="visible-feature icon">
           <i class="fa-solid fa-eye-slash char"></i>
         </button>
-        <button class="explaining icon tooltip">
+        <button class="explaining icon tooltip" tooltip-text="How to Play">
           <i class="fa-solid fa-circle-info"></i>
         </button>
       </div>
@@ -60,44 +60,67 @@
     <dialog class="dialog-info">
       <i class="fa-solid fa-circle-xmark"></i>
       <div class="content-info">
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Cara mainnya</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, vero.
-          Quidem libero, porro harum praesentium, maiores reprehenderit cum
-          aspernatur nisi saepe nihil dicta. Similique eveniet dolorem inventore
-          porro excepturi reprehenderit.
+          Kamu akan diberi sebuah operasi matematika bersusun, bisa penjumlahan
+          atau pengurangan tergantung pilihanmu.
+          <br />Operasi yang disajikan akan berupa huruf-huruf. <br />
         </p>
+        <img src="img/contoh.jpeg" alt="contoh soal" />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, vero.
-          Quidem libero, porro harum praesentium, maiores reprehenderit cum
-          aspernatur nisi saepe nihil dicta. Similique eveniet dolorem inventore
-          porro excepturi reprehenderit.
+          <b>Tiap huruf mewakili satu angka.</b> <br />Jadi, tugasmu adalah
+          <b>tentukan angkanya agar bisa jadi operasi matematika yang tepat</b>
         </p>
+        <img src="img/contoh-bener.jpeg" alt="contoh bener" />
+        <p>POV: setelah kamu submit, dan jawabanmu bener.</p>
+        <br />
+        <h5>
+          Arti simbol mata satu <i class="fa-solid fa-eye-slash char"></i>
+        </h5>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis,
-          ratione. Tempora reprehenderit ab ex accusantium temporibus quidem
-          consequuntur. Nemo omnis quam perferendis perspiciatis praesentium
-          repudiandae eaque architecto laboriosam, dignissimos est, obcaecati
-          accusantium. Alias doloremque, voluptate sunt temporibus praesentium
-          veritatis facere sequi, quae, natus saepe aut excepturi aliquam
-          pariatur quo rem quibusdam vero repellat deserunt vel dignissimos
-          quia! Maxime consequuntur quisquam adipisci exercitationem omnis
-          repellat quos ipsum velit. Dolore voluptatem dignissimos earum alias
-          similique, voluptate et officiis doloribus atque libero perspiciatis
-          cum aliquam eligendi facilis. Dolorum nostrum corrupti fuga dolores
-          laborum enim exercitationem reiciendis ipsa veritatis reprehenderit
-          quos eum delectus illo harum, odit accusamus culpa perferendis ratione
-          inventore iure voluptatibus atque earum? Distinctio excepturi aliquam
-          consectetur molestias voluptatum fugit assumenda blanditiis, quia
-          fugiat ad quae dolorum repellat cumque pariatur quas cupiditate vitae
-          ipsam illum fuga amet nobis. Quae fuga cupiditate nemo deserunt nihil
-          dolore eveniet nam nisi voluptate ex, est neque? Voluptates id esse
-          nemo ad ipsam sunt dolores doloribus ex debitis quo, unde deserunt
-          modi, possimus nesciunt provident laudantium, repudiandae eius vero
-          amet neque. Debitis ut ullam vitae. Tempore doloribus minima sed quas
-          amet minus tempora laudantium ut. Dolorem officia adipisci dolor nam
-          praesentium nulla veniam exercitationem in eligendi. Vel!
+          Kalau kamu pencet, dia akan berubah jadi
+          <i class="fa-solid fa-eye num"></i>, lalu setelahnya kamu bisa lihat
+          angka yang udah kamu masukin secara langsung. (Cek video di bawah)
         </p>
+        <video controls>
+          <source src="video/record.webm" type="video/webm" />
+        </video>
+        <p>
+          Jadi, kamu bisa lihat apakah angka yang kamu masukin cocok atau nggak,
+          sebelum nanti disubmit
+        </p>
+        <br />
+        <h5>
+          Tombol reload
+          <i class="fa-solid fa-rotate-left"></i>
+        </h5>
+        <p>
+          Kalau kamu sudah buntu banget, kamu bisa <b>ganti soal</b> dengan
+          mencet tombol ini.
+        </p>
+        <br />
+        <h5>
+          Tombol kalkulator
+          <i class="fa-solid fa-calculator"></i>
+        </h5>
+        <p>
+          Gunanya untuk milih jenis soalnya, mau <b>penjumlahan</b> atau
+          <b>pengurangan</b>
+        </p>
+        <img src="img/jenis-soal.jpeg" alt="jenis-soal" />
+        <p>Jadi lihat simbolnya ya, jangan sampai salah mengerjakan.</p>
+        <p>
+          Saat ini hanya ada penjumlahan dan pengurangan, kalau misal kamu
+          setuju untuk ditambah perkalian dan pembagian, <br />
+          dm me now:
+          <a href="https://instagram.com/hhibrizii" id="ig" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </p>
+        <br />
+        <h5>Have a nice play!!!</h5>
+        <br />
+        <p><i>hh</i></p>
       </div>
     </dialog>
     <footer>
