--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/cedd60cf88.js"
       crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="img/icon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -60,7 +60,7 @@
     <dialog class="dialog-info">
       <i class="fa-solid fa-circle-xmark"></i>
       <div class="content-info">
-        <h3>Cara mainnya</h3>
+        <h3 tabindex="-1">Cara mainnya</h3>
         <p>
           Kamu akan diberi sebuah operasi matematika bersusun, bisa penjumlahan
           atau pengurangan tergantung pilihanmu.
